<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diegoagama.exerciciointent.SecondaryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoGoogleMaps"
        android:id="@+id/botaoGoogleMaps"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:onClick="googleMaps"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botaoSMS"
        android:text="@string/botaoSMS"
        android:layout_below="@+id/botaoGoogleMaps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:onClick="enviarSMS"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoAlarme"
        android:id="@+id/botaoAlarme"
        android:layout_below="@+id/botaoSMS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="definirAlarme"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoMusica"
        android:id="@+id/botaoMusica"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="abrirMusica"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoBusca"
        android:id="@+id/botaoBusca"
        android:layout_below="@+id/botaoMusica"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="fazerBusca"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoConfig"
        android:id="@+id/botaoConfig"
        android:layout_below="@+id/botaoBusca"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="abrirConfig"/>

</RelativeLayout>
